--- a/index.html
+++ b/index.html
@@ -2031,6 +2031,28 @@ as <code>transit</code></p>
 <li>
 <p><a href="https://github.com/http-kit/http-kit"><code>org.httpkit.server</code></a></p>
 </li>
+<li>
+<p><a href="https://github.com/clojure/core.match"><code>clojure.core.match</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/weavejester/hiccup/"><code>hiccup.core</code></a> and <code>hiccup2.core</code></p>
+</li>
+<li>
+<p><a href="https://github.com/clojure/test.check"><code>clojure.test.check</code></a>:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><code>clojure.test.check</code></p>
+</li>
+<li>
+<p><code>clojure.test.check.generators</code></p>
+</li>
+<li>
+<p><code>clojure.test.check.properties</code></p>
+</li>
+</ul>
+</div>
+</li>
 </ul>
 </div>
 <div class="paragraph">
