--- a/index.html
+++ b/index.html
@@ -1995,6 +1995,9 @@ PR is welcome.</p>
 <p><a href="https://github.com/babashka/process"><code>babashka/process</code></a></p>
 </li>
 <li>
+<p><a href="https://github.com/babashka/fs"><code>babashka/fs</code></a></p>
+</li>
+<li>
 <p><a href="https://github.com/nrepl/bencode"><code>bencode.core</code></a> aliased as <code>bencode</code>:
 <code>read-bencode</code>, <code>write-bencode</code></p>
 </li>
@@ -2295,7 +2298,7 @@ namespace.</p>
 <div class="sect3">
 <h4 id="babashkaprocess"><a class="link" href="#babashkaprocess">babashka.process</a></h4>
 <div class="paragraph">
-<p>The <code>babashka.process</code> process library. See the
+<p>The <code>babashka.process</code> library. See the
 <a href="https://github.com/babashka/process">process</a> repo for API docs.</p>
 </div>
 </div>
@@ -2310,6 +2313,13 @@ with the subset of Clojure that sci is capable of running.</p>
 <p>Check this
 <a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md">page</a> for
 projects that are known to work with babashka.</p>
+</div>
+<div class="sect3">
+<h4 id="babashkafs"><a class="link" href="#babashkafs">babashka.fs</a></h4>
+<div class="paragraph">
+<p>The <code>babashka.fs</code> library offers file system utilities. See the
+<a href="https://github.com/babashka/fs">fs</a> repo for API docs.</p>
+</div>
 </div>
 </div>
 </div>
