--- a/index.html
+++ b/index.html
@@ -1095,32 +1095,35 @@ of the form</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hello bye</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">hello<br>
+bye</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-i</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>("hello" "bye")</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>("hello" "bye")</code></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hello bye</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">hello<br>
+bye</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-i</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-o</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>("hello" "bye")</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hello bye</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">hello<br>
+bye</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code> <code>{:a 2}</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1} {:a 2}</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-I</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>({:a 1} {:a 2})</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>({:a 1} {:a 2})</code></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code> <code>{:a 2}</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1} {:a 2}</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-I</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-O</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>({:a 1} {:a 2})</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code> <code>{:a 2}</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1} {:a 2}</code></p></td>
 </tr>
 </tbody>
 </table>
