--- a/master.html
+++ b/master.html
@@ -1009,7 +1009,7 @@ Use <span class="nt">--</span> to separate script <span class="nb">command </spa
   </span><span class="p">(</span><span class="nb">when</span><span class="w"> </span><span class="p">(</span><span class="nb">or</span><span class="w"> </span><span class="p">(</span><span class="nf">empty?</span><span class="w"> </span><span class="n">url</span><span class="p">)</span><span class="w"> </span><span class="p">(</span><span class="nf">empty?</span><span class="w"> </span><span class="n">file</span><span class="p">))</span><span class="w">
     </span><span class="p">(</span><span class="nb">println</span><span class="w"> </span><span class="s">"Usage: &lt;url&gt; &lt;file&gt;"</span><span class="p">)</span><span class="w">
     </span><span class="p">(</span><span class="nf">System/exit</span><span class="w"> </span><span class="mi">1</span><span class="p">))</span><span class="w">
-  </span><span class="p">(</span><span class="nf">write-html</span><span class="w"> </span><span class="n">file</span><span class="w"> </span><span class="p">(</span><span class="nf">get-url</span><span class="w"> </span><span class="n">url</span><span class="p">)))</span></code></pre>
+  </span><span class="p">(</span><span class="nf">write-html</span><span class="w"> </span><span class="n">file</span><span class="w"> </span><span class="p">(</span><span class="no">:body</span><span class="w"> </span><span class="p">(</span><span class="nf">get-url</span><span class="w"> </span><span class="n">url</span><span class="p">))))</span></code></pre>
 </div>
 </div>
 <div class="listingblock">
@@ -1095,32 +1095,35 @@ of the form</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hello bye</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">hello<br>
+bye</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-i</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>("hello" "bye")</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>("hello" "bye")</code></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hello bye</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">hello<br>
+bye</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-i</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-o</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>("hello" "bye")</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hello bye</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">hello<br>
+bye</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code> <code>{:a 2}</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1} {:a 2}</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-I</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>({:a 1} {:a 2})</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>({:a 1} {:a 2})</code></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code> <code>{:a 2}</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1} {:a 2}</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-I</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>-O</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>({:a 1} {:a 2})</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1}</code> <code>{:a 2}</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>{:a 1} {:a 2}</code></p></td>
 </tr>
 </tbody>
 </table>
@@ -1995,6 +1998,9 @@ PR is welcome.</p>
 <p><a href="https://github.com/babashka/process"><code>babashka/process</code></a></p>
 </li>
 <li>
+<p><a href="https://github.com/babashka/fs"><code>babashka/fs</code></a></p>
+</li>
+<li>
 <p><a href="https://github.com/nrepl/bencode"><code>bencode.core</code></a> aliased as <code>bencode</code>:
 <code>read-bencode</code>, <code>write-bencode</code></p>
 </li>
@@ -2033,6 +2039,25 @@ as <code>transit</code></p>
 </li>
 <li>
 <p><a href="https://github.com/clojure/core.match"><code>clojure.core.match</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/weavejester/hiccup/"><code>hiccup.core</code></a> and <code>hiccup2.core</code></p>
+</li>
+<li>
+<p><a href="https://github.com/clojure/test.check"><code>clojure.test.check</code></a>:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><code>clojure.test.check</code></p>
+</li>
+<li>
+<p><code>clojure.test.check.generators</code></p>
+</li>
+<li>
+<p><code>clojure.test.check.properties</code></p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -2276,7 +2301,7 @@ namespace.</p>
 <div class="sect3">
 <h4 id="babashkaprocess"><a class="link" href="#babashkaprocess">babashka.process</a></h4>
 <div class="paragraph">
-<p>The <code>babashka.process</code> process library. See the
+<p>The <code>babashka.process</code> library. See the
 <a href="https://github.com/babashka/process">process</a> repo for API docs.</p>
 </div>
 </div>
@@ -2291,6 +2316,13 @@ with the subset of Clojure that sci is capable of running.</p>
 <p>Check this
 <a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md">page</a> for
 projects that are known to work with babashka.</p>
+</div>
+<div class="sect3">
+<h4 id="babashkafs"><a class="link" href="#babashkafs">babashka.fs</a></h4>
+<div class="paragraph">
+<p>The <code>babashka.fs</code> library offers file system utilities. See the
+<a href="https://github.com/babashka/fs">fs</a> repo for API docs.</p>
+</div>
 </div>
 </div>
 </div>
