--- a/index.html
+++ b/index.html
@@ -2105,6 +2105,25 @@ as <code>transit</code></p>
 </ul>
 </div>
 </li>
+<li>
+<p><a href="https://github.com/clj-commons/rewrite-clj">rewrite-clj</a>:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><code>rewrite-clj.parser</code></p>
+</li>
+<li>
+<p><code>rewrite-clj.node</code></p>
+</li>
+<li>
+<p><code>rewrite-clj.zip</code></p>
+</li>
+<li>
+<p><code>rewrite-clj.paredit</code></p>
+</li>
+</ul>
+</div>
+</li>
 </ul>
 </div>
 <div class="paragraph">
