--- a/index.html
+++ b/index.html
@@ -1486,13 +1486,18 @@ If you want to read multiple EDN values, use the <code>-I</code> flag. The <code
 option prints the result as lines of text. The <code>-O</code> option prints the
 result as lines of EDN values.</p>
 </div>
-<div class="quoteblock">
-<blockquote>
-<div class="paragraph">
-<p><strong>Note:</strong> <code>*input*</code> is only available in the <code>user</code> namespace, designed
-for one-liners. For writing scripts, see <a href="#scripts">scripts</a>.</p>
-</div>
-</blockquote>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<code>*input*</code> is only available in the <code>user</code> namespace, designed
+for one-liners. For writing scripts, see <a href="#_scripts">Scripts</a>.
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
 <p>The following table illustrates the combination of options for commands
@@ -2106,7 +2111,7 @@ as <code>transit</code></p>
 </div>
 </li>
 <li>
-<p><a href="https://github.com/clj-commons/rewrite-clj">rewrite-clj</a>:</p>
+<p><a href="https://github.com/clj-commons/rewrite-clj"><code>rewrite-clj</code></a>:</p>
 <div class="ulist">
 <ul>
 <li>
