--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@ you to set the classpath using a <code>deps.edn</code> map.</p>
 <div class="sect3">
 <h4 id="_bb_edn"><a class="link" href="#_bb_edn">bb.edn</a></h4>
 <div class="paragraph">
-<p>Since babashka 0.3.1 supports a local <code>bb.edn</code> file where you can declare one
+<p>Since version 0.3.1, babashka supports a local <code>bb.edn</code> file where you can declare one
 or multiple paths and dependencies so they are automatically added to the classpath:</p>
 </div>
 <div class="listingblock">
@@ -1194,6 +1194,32 @@ or multiple paths and dependencies so they are automatically added to the classp
 <div class="content">
 <pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">-e</span><span class="w"> </span><span class="s">"(require '[medley.core :as m]) (m/index-by :id [{:id 1} {:id 2}])"</span><span class="w">
 </span><span class="p">{</span><span class="mi">1</span><span class="w"> </span><span class="p">{</span><span class="no">:id</span><span class="w"> </span><span class="mi">1</span><span class="p">}</span><span class="n">,</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="p">{</span><span class="no">:id</span><span class="w"> </span><span class="mi">2</span><span class="p">}}</span></code></pre>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_min_bb_version"><a class="link" href="#_min_bb_version">:min-bb-version</a></h5>
+<div class="paragraph">
+<p>Since version 0.3.6, babashka supports the <code>:min-bb-version</code> where the minimal
+babashka version can be declared:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:paths</span><span class="w"> </span><span class="p">[</span><span class="s">"src"</span><span class="p">]</span><span class="w">
+ </span><span class="no">:deps</span><span class="w"> </span><span class="p">{</span><span class="n">medley/medley</span><span class="w"> </span><span class="p">{</span><span class="no">:mvn/version</span><span class="w"> </span><span class="s">"1.3.0"</span><span class="p">}}</span><span class="w">
+ </span><span class="no">:min-bb-version</span><span class="w"> </span><span class="s">"1.0.0"</span><span class="p">}</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>When using an older bb version (that supports <code>:min-bb-version</code>), babashka will
+print a warning:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code>---
+WARNING: this project requires babashka 1.0.0 or newer, but you have: 0.3.6
+---
+[source]</code></pre>
+</div>
 </div>
 </div>
 </div>
