--- a/index.html
+++ b/index.html
@@ -929,9 +929,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="bash">Babashka v0.3.1
-
-Usage: bb <span class="o">[</span>classpath opts] <span class="o">[</span><span class="nb">eval </span>opts] <span class="o">[</span>cmdline args]
+<pre class="rouge highlight"><code data-lang="bash">Usage: bb <span class="o">[</span>classpath opts] <span class="o">[</span><span class="nb">eval </span>opts] <span class="o">[</span>cmdline args]
 or:    bb <span class="o">[</span>classpath opts] file <span class="o">[</span>cmdline args]
 or:    bb <span class="o">[</span>classpath opts] subcommand <span class="o">[</span>subcommand opts] <span class="o">[</span>cmdline args]
 
@@ -956,8 +954,8 @@ Help:
 REPL:
 
   repl                 Start REPL. Use rlwrap <span class="k">for </span>history.
-  socket-repl  <span class="o">[</span>addr]  Start a socket REPL. Addr opt defaults to localhost:1666.
-  nrepl-server <span class="o">[</span>addr]  Start nREPL server. Address option defaults to locahost:1667.
+  socket-repl  <span class="o">[</span>addr]  Start a socket REPL. Address defaults to localhost:1666.
+  nrepl-server <span class="o">[</span>addr]  Start nREPL server. Address defaults to localhost:1667.
 
 Clojure:
 
@@ -1181,8 +1179,13 @@ you to set the classpath using a <code>deps.edn</code> map.</p>
 <div class="sect3">
 <h4 id="_bb_edn"><a class="link" href="#_bb_edn">bb.edn</a></h4>
 <div class="paragraph">
-<p>Since version 0.3.1, babashka supports a local <code>bb.edn</code> file where you can declare one
-or multiple paths and dependencies so they are automatically added to the classpath:</p>
+<p>Since version 0.3.1, babashka supports a local <code>bb.edn</code> file to manage a project.</p>
+</div>
+<div class="sect4">
+<h5 id="_classpath_2"><a class="link" href="#_classpath_2">Classpath</a></h5>
+<div class="paragraph">
+<p>You can declare one or multiple paths and dependencies so they are automatically
+added to the classpath:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -1194,6 +1197,7 @@ or multiple paths and dependencies so they are automatically added to the classp
 <div class="content">
 <pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">-e</span><span class="w"> </span><span class="s">"(require '[medley.core :as m]) (m/index-by :id [{:id 1} {:id 2}])"</span><span class="w">
 </span><span class="p">{</span><span class="mi">1</span><span class="w"> </span><span class="p">{</span><span class="no">:id</span><span class="w"> </span><span class="mi">1</span><span class="p">}</span><span class="n">,</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="p">{</span><span class="no">:id</span><span class="w"> </span><span class="mi">2</span><span class="p">}}</span></code></pre>
+</div>
 </div>
 </div>
 <div class="sect4">
