--- a/index.html
+++ b/index.html
@@ -2159,6 +2159,16 @@ as <code>transit</code></p>
 </ul>
 </div>
 </li>
+<li>
+<p><a href="https://github.com/yogthos/Selmer"><code>Selmer</code></a>:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><code>selmer.parser</code></p>
+</li>
+</ul>
+</div>
+</li>
 </ul>
 </div>
 <div class="paragraph">
