--- a/index.html
+++ b/index.html
@@ -2183,10 +2183,15 @@ will disable them for specific tasks.</p>
 <div class="sect2">
 <h3 id="_command_line_arguments"><a class="link" href="#_command_line_arguments">Command line arguments</a></h3>
 <div class="paragraph">
-<p>Babashka tasks is unopinionated when it comes to command line
-arguments. Arguments are available in the dynamic var <code>*command-line-args*</code> at
-any time. The same dynamic var can be rebound to ensure functions see a
-different set of arguments:</p>
+<p>Babashka tasks is unopinionated when it comes to command line arguments.
+Arguments are available in the dynamic var <code>*command-line-args*</code>. You are free
+to use parse them using the built-in <code>tools.cli</code> library, use
+<a href="https://github.com/nubank/docopt.clj">docopt</a>, convert them to EDN using <code>(map
+edn/read-string *command-line-args*)</code> or do whatever to handle them.</p>
+</div>
+<div class="paragraph">
+<p>The same dynamic var can be rebound to ensure functions see a different
+set of arguments:</p>
 </div>
 <div class="listingblock">
 <div class="content">
