--- a/master.html
+++ b/master.html
@@ -2166,8 +2166,8 @@ the name of a task, which can be obtained using the <code>current-task</code> fu
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="bash">Entering: print-env
-<span class="nv">$ FOO</span><span class="o">=</span>1 bb print-env FOO
+<pre class="rouge highlight"><code data-lang="bash"><span class="nv">$ FOO</span><span class="o">=</span>1 bb print-env FOO
+Entering: print-env
 1</code></pre>
 </div>
 </div>
