--- a/master.html
+++ b/master.html
@@ -2175,8 +2175,8 @@ Entering: print-env
 <p>The <code>:leave</code> hook is similar to <code>:enter</code> but it executed after each task.</p>
 </div>
 <div class="paragraph">
-<p>Both hooks can be overriden as task-local options. E.g. setting them to <code>nil</code>
-will disable them for specific tasks.</p>
+<p>Both hooks can be overriden as task-local options. Setting them to <code>nil</code> will
+disable them for specific tasks.</p>
 </div>
 </div>
 </div>
