--- a/index.html
+++ b/index.html
@@ -2185,7 +2185,7 @@ disable them for specific tasks.</p>
 <div class="paragraph">
 <p>The task runner is unopinionated when it comes to command line arguments.
 Arguments are available in the dynamic var <code>*command-line-args*</code>. You are free
-to use parse them using the built-in <code>tools.cli</code> library, use
+to parse them using the built-in <code>tools.cli</code> library, use
 <a href="https://github.com/nubank/docopt.clj">docopt</a>, convert them to EDN using <code>(map
 edn/read-string *command-line-args*)</code> or do whatever to handle them.</p>
 </div>
