--- a/master.html
+++ b/master.html
@@ -2183,7 +2183,7 @@ disable them for specific tasks.</p>
 <div class="sect2">
 <h3 id="_command_line_arguments"><a class="link" href="#_command_line_arguments">Command line arguments</a></h3>
 <div class="paragraph">
-<p>Babashka tasks is unopinionated when it comes to command line arguments.
+<p>The task runner is unopinionated when it comes to command line arguments.
 Arguments are available in the dynamic var <code>*command-line-args*</code>. You are free
 to use parse them using the built-in <code>tools.cli</code> library, use
 <a href="https://github.com/nubank/docopt.clj">docopt</a>, convert them to EDN using <code>(map
