--- a/index.html
+++ b/index.html
@@ -2187,7 +2187,7 @@ disable them for specific tasks.</p>
 Arguments are available in the dynamic var <code>*command-line-args*</code>. You are free
 to parse them using the built-in <code>tools.cli</code> library, use
 <a href="https://github.com/nubank/docopt.clj">docopt</a>, convert them to EDN using <code>(map
-edn/read-string *command-line-args*)</code> or do whatever to handle them.</p>
+edn/read-string *command-line-args*)</code> or do whatever you want to handle them.</p>
 </div>
 <div class="paragraph">
 <p>The same dynamic var can be rebound to ensure functions see a different
