--- a/master.html
+++ b/master.html
@@ -2184,10 +2184,10 @@ disable them for specific tasks.</p>
 <h3 id="_command_line_arguments"><a class="link" href="#_command_line_arguments">Command line arguments</a></h3>
 <div class="paragraph">
 <p>The task runner is unopinionated when it comes to command line arguments.
-Arguments are available in the dynamic var <code>*command-line-args*</code>. You are free
+Arguments are available in <code>*command-line-args*</code>. You are free
 to parse them using the built-in <code>tools.cli</code> library, use
 <a href="https://github.com/nubank/docopt.clj">docopt</a>, convert them to EDN using <code>(map
-edn/read-string *command-line-args*)</code> or do whatever to handle them.</p>
+edn/read-string *command-line-args*)</code> or do whatever you want to handle them.</p>
 </div>
 <div class="paragraph">
 <p>The same dynamic var can be rebound to ensure functions see a different
