--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@ pre.rouge {
 <li><a href="#_run">Run</a></li>
 <li><a href="#_hooks">Hooks</a></li>
 <li><a href="#_command_line_arguments">Command line arguments</a></li>
-<li><a href="#_task_options">Task options</a></li>
+<li><a href="#_task_local_options">Task-local options</a></li>
 <li><a href="#_discoverability">Discoverability</a></li>
 <li><a href="#_tasks_api">Tasks API</a></li>
 <li><a href="#_dependencies_between_tasks">Dependencies between tasks</a></li>
@@ -2214,7 +2214,7 @@ bar <span class="o">(</span><span class="s2">"2"</span> <span class="s2">"3"</sp
 </div>
 </div>
 <div class="sect2">
-<h3 id="_task_options"><a class="link" href="#_task_options">Task options</a></h3>
+<h3 id="_task_local_options"><a class="link" href="#_task_local_options">Task-local options</a></h3>
 <div class="paragraph">
 <p>Instead of naked expressions, tasks can be defined as maps with options. The
 task expression should then be moved to the <code>:task</code> key:</p>
