--- a/master.html
+++ b/master.html
@@ -2190,8 +2190,8 @@ to parse them using the built-in <code>tools.cli</code> library, use
 edn/read-string *command-line-args*)</code> or do whatever you want to handle them.</p>
 </div>
 <div class="paragraph">
-<p>The same dynamic var can be rebound to ensure functions see a different
-set of arguments:</p>
+<p>You can re-bind <code>*command-line-args*</code> to ensure functions see a different set of
+arguments:</p>
 </div>
 <div class="listingblock">
 <div class="content">
