--- a/index.html
+++ b/index.html
@@ -2231,9 +2231,8 @@ task expression should then be moved to the <code>:task</code> key:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>A task support the <code>:doc</code> option which gives them a docstring which is printed
-when invoking <code>bb tasks</code>, which lists all available tasks in the order found in
-the <code>bb.edn</code> file. Other options include:</p>
+<p>A task support the <code>:doc</code> option which gives it a docstring which is printed
+when invoking <code>bb tasks</code> on the command line. Other options include:</p>
 </div>
 <div class="ulist">
 <ul>
