--- a/index.html
+++ b/index.html
@@ -2338,8 +2338,7 @@ stdin/stdout/stderr from the babashka process.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="n">,,,</span><span class="w">
- </span><span class="no">:tasks</span><span class="w">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w">
  </span><span class="p">{</span><span class="w">
   </span><span class="n">ls</span><span class="w"> </span><span class="p">(</span><span class="nf">shell</span><span class="w"> </span><span class="s">"ls foo"</span><span class="p">)</span><span class="w">
  </span><span class="p">}</span><span class="w">
@@ -2360,8 +2359,7 @@ Error <span class="k">while </span>executing task: <span class="nb">ls</span>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="n">,,,</span><span class="w">
- </span><span class="no">:tasks</span><span class="w">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w">
  </span><span class="p">{</span><span class="w">
   </span><span class="n">ls</span><span class="w"> </span><span class="p">(</span><span class="nf">shell</span><span class="w"> </span><span class="p">{</span><span class="no">:continue</span><span class="w"> </span><span class="n">true</span><span class="p">}</span><span class="w"> </span><span class="s">"ls foo"</span><span class="p">)</span><span class="w">
  </span><span class="p">}</span><span class="w">
