--- a/master.html
+++ b/master.html
@@ -2289,8 +2289,7 @@ without a namespace prefix.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="n">,,,</span><span class="w">
- </span><span class="no">:tasks</span><span class="w">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">{</span><span class="no">:tasks</span><span class="w">
  </span><span class="p">{</span><span class="no">:requires</span><span class="w"> </span><span class="p">([</span><span class="n">babashka.fs</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">fs</span><span class="p">])</span><span class="w">
 
   </span><span class="n">clean</span><span class="w"> </span><span class="p">(</span><span class="nf">do</span><span class="w">
