--- a/index.html
+++ b/index.html
@@ -2405,7 +2405,9 @@ directly instead.</p>
 </div>
 </div>
 <div class="paragraph">
-<p>The function behaves similar to <code>shell</code> with respect to the exit code, and available options, except when it comes to features that do not start a process, but only do some printing. E.g.:</p>
+<p>The function behaves similar to <code>shell</code> with respect to the exit code, return
+value and supported options, except when it comes to features that do not start
+a process, but only do some printing. E.g.:</p>
 </div>
 <div class="listingblock">
 <div class="content">
