--- a/index.html
+++ b/index.html
@@ -2588,7 +2588,7 @@ at Doctor Evidence</a></p>
 <div class="sect3">
 <h4 id="_valid_names"><a class="link" href="#_valid_names">Valid names</a></h4>
 <div class="paragraph">
-<p>When runnning a task, babashka assembles a small program which defines vars
+<p>When running a task, babashka assembles a small program which defines vars
 bound to the return values of tasks. This brings the limitation that you can
 only choose names for your tasks that are valid as var names. You can&#8217;t name
 your task <code>foo/bar</code> for this reason. If you want to use delimiters to indicate
