--- a/index.html
+++ b/index.html
@@ -2598,7 +2598,7 @@ some sort of grouping, you can do it like <code>foo-bar</code>, <code>foo:bar</c
 <div class="sect3">
 <h4 id="_conflicting_file_task_subcommand_names"><a class="link" href="#_conflicting_file_task_subcommand_names">Conflicting file / task / subcommand names</a></h4>
 <div class="paragraph">
-<p><code>bb &lt;option&gt;</code> is resolved in this order of file, task, subcommand.</p>
+<p><code>bb &lt;option&gt;</code> is resolved in the order of file &gt; task &gt; subcommand.</p>
 </div>
 <div class="paragraph">
 <p>Escape hatches in case of conflicts:</p>
