--- a/index.html
+++ b/index.html
@@ -2274,6 +2274,22 @@ ovsx-publish       Publishes vscode extension to ovsx thing
 publish            The mother of all tasks: publishes everything needed <span class="k">for </span>new release</code></pre>
 </div>
 </div>
+<div class="sect3">
+<h4 id="_terminal_tab_complete_on_zsh"><a class="link" href="#_terminal_tab_complete_on_zsh">Terminal tab-complete on <code>zsh</code></a></h4>
+<div class="paragraph">
+<p>Add this to your <code>.zshrc</code> to get tab-complete feature on ZSH.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="bash">_bb_tasks<span class="o">()</span> <span class="o">{</span>
+    <span class="nb">local </span><span class="nv">matches</span><span class="o">=(</span><span class="sb">`</span>bb tasks |tail <span class="nt">-n</span> +3 |cut <span class="nt">-f1</span> <span class="nt">-d</span> <span class="s1">' '</span><span class="sb">`</span><span class="o">)</span>
+    compadd <span class="nt">-a</span> matches
+    _files <span class="c"># autocomplete filenames as well</span>
+<span class="o">}</span>
+compdef _bb_tasks bb</code></pre>
+</div>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_tasks_api"><a class="link" href="#_tasks_api">Tasks API</a></h3>
