--- a/index.html
+++ b/index.html
@@ -2290,6 +2290,25 @@ compdef _bb_tasks bb</code></pre>
 </div>
 </div>
 </div>
+<div class="sect3">
+<h4 id="_terminal_tab_complete_on_fish_shell"><a class="link" href="#_terminal_tab_complete_on_fish_shell">Terminal tab-complete on <code>Fish shell</code></a></h4>
+<div class="paragraph">
+<p>Add this to your <code>.config/fish/completions/bb.fish</code> to get tab-complete feature on Fish shell.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="bash"><span class="k">function </span>__bb_complete_tasks
+  <span class="k">if </span>not <span class="nb">test</span> <span class="s2">"</span><span class="nv">$__bb_tasks</span><span class="s2">"</span>
+    <span class="nb">set</span> <span class="nt">-g</span> __bb_tasks <span class="o">(</span>bb tasks |tail <span class="nt">-n</span> +3 |cut <span class="nt">-f1</span> <span class="nt">-d</span> <span class="s1">' '</span><span class="o">)</span>
+  end
+
+  <span class="nb">printf</span> <span class="s2">"%s</span><span class="se">\n</span><span class="s2">"</span> <span class="nv">$__bb_tasks</span>
+end
+
+<span class="nb">complete</span> <span class="nt">-f</span> <span class="nt">-c</span> bb <span class="nt">-a</span> <span class="s2">"(__bb_complete_tasks)"</span> <span class="nt">-d</span> <span class="s1">'List tasks'</span></code></pre>
+</div>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_tasks_api"><a class="link" href="#_tasks_api">Tasks API</a></h3>
